app/styles/10_all.sass
body
  font-family: 'Helvetica Neue', Arial, STHeiti
  padding: 0
  margin: 2.5rem 1rem
  background-color: #f9f9f9

h1,h2,h3,h4
  margin: 0
  padding: 0
  color: #666
  font-size: 1rem

a,a:link,a:hover,a:active
  text-decoration: none
  display: inline-block

.blackbg
  background: url(/img/galaxy.jpg) #000 no-repeat center center fixed

.ui.fixed.main.menu
  z-index: 200
  top: 0
  left: 0
  height: 45px
  .title.item
    line-height: 21px
    vertical-align: top
    img
      display: inline
      width: 42px
      height: 21px
      margin-right: 5px

.container
  width: 1024px
  margin: 0 auto

#cinema-curtain
  width: 100%
  position: absolute
  height: 664px
  .curtain-left
    background-image: url('/img/curtain-left.png') 
    background-repeat: no-repeat
    float: left
    width: 302px
    height: 664px
    margin-top: 5px
    margin-left: -16px
  .curtain-right
    background-image: url('/img/curtain-right.png') 
    background-repeat: no-repeat
    height: 664px
    width: 302px
    float: right
    margin-top: 5px
    margin-right: -18px

